# FlexOlmo

./: .gitignore  Makefile  NOTICE.txt  README.md  personalize.py  pyproject.toml
.github/: RELEASE_PROCESS.md
.github/actions/setup-venv/: action.yml
.github/workflows/: docker.yml  main.yml  setup.yml
docs/source/: conf.py  index.rst
docs/source/overview/: installation.rst
scripts/: README.md  combine_experts.sh  extraction_analysis.sh  print_evals.py  train_expert_model.sh  train_public_model.sh
src/: Dockerfile
src/data/domain_embeddings/grit/: code.npy  creative.npy  math.npy  news.npy  pes2o.npy  public.npy  reddit.npy
src/flexolmo/: data_utils.py  path_utils.py  version.py
src/flexolmo/data/mixes/: __init__.py  anneal_test_mix.txt  creative_writing.txt  dolmino_minus_math.txt  dolmino_minus_math_flan.txt  flan.txt  mj_finemath4plus.txt  news.txt  pes2o.txt  proxy_code.txt  proxy_combined_public_math_code_news.txt  proxy_creative.txt  proxy_math.txt  proxy_news.txt  proxy_pes2o.txt  proxy_reddit.txt  public_mix.txt  reddit_v0.txt  starcoder.txt
src/flexolmo/eval/: __init__.py  evaluator_callback.py  metrics.py  tasks.py
src/flexolmo/internal/: common.py  model_utils.py  train_utils.py
src/flexolmo/nn/moe/: __init__.py  router.py
src/flexolmo/train/train_module/: transformer.py
src/offline_evals/: __init__.py  launch_utils.py  run_btm_weight_merged_eval.py  run_eval.py
src/offline_evals/metrics/: llm.py  lm_judge.py  news_judge_prompt.py  poem_judge_prompt.py
src/offline_evals/models/: extended_defaults.py  huggingface_set.py
src/offline_evals/tasks/: agi_eval.py  hatespeech.py  medmcqa.py  medqa.py  narrativeqa.py  news_gen.py  poem_gen.py  ruler.py  sciriff.py  story_gen.py  utils.py  xsum.py
src/scripts/beaker/: README.md  launch.py  run_eval_on_beaker.sh
src/scripts/eval/: launch_beaker_eval.sh  launch_eval.py  launch_local.py  print_evals.py  run_eval.sh  setup_eval_env.sh  task_suites.py  tasks.py
src/scripts/train/: OLMo2-7B-anneal.py  OLMo2-7B-finetune.py  OLMo2-7B-train.py  OLMo2-tiny-train.py  OLMoE-2x7B-anneal.py  OLMoE-4x7B.py
src/scripts/upcycle/: dense_to_expert.py  dense_to_expert_moe.py  merge_experts_to_flexolmo.py
src/scripts/utils/: extraction_analysis.py  get_domain_embeddings.py  unshard.py
src/test/: my_package_test.py
